# pypiccolo

./: pyproject.toml
src/pypiccolo_gennadiryan/: hello.py
