[build-system]
requires = ["setuptools>=75.8",]
build_backend = "setuptools.build_meta"

[project]
name = "pypiccolo_gennadiryan"
version = "0.0.1"
authors = [
    { name = "example", email = "example@example.org", },
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE",]

[project.urls]
