[build-system]
requires = ["setuptools>=75.8",]
build-backend = "setuptools.build_meta"

[project]
name = "pypiccolo_gennadiryan"
version = "0.0.1"
dependencies = [
    "numpy>=2.2",
]
requires-python = ">=3.12"
authors = [
    { name = "Gennadi Ryan", email = "gennadiryan@gmail.org" },
    { name = "Jack Champagne", email = "example@example.com" },
]
# maintainers = [
#     { name = "example", email = "example@example.com" },
# ]
# description = ""
readme = "README.md"
license = { file = "LICENSE" }
# keywords = ["hello", "world",]
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "Operating System :: OS Independent",
# ]

[project.urls]
# Homepage = ""
# Documentation = ""
# Repository = ""
# Issues = ""
# Changelog = ""
